--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -48,4 +48,17 @@ spec:
       - name: args
         value: ["--count","--max-complexity=10","--max-line-length=127","--statistics"]
       runAfter:
-        - clone      
+        - clone
+    - name: lint
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+      taskRef:
+        name: flake8
+      params:
+      - name: image
+        value: "python:3.9-slim"
+      - name: args
+        value: ["--count","--max-complexity=10","--max-line-length=127","--statistics"]
+      runAfter:
+        - clone
