--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -14,8 +14,8 @@ spec:
   params:
     - name: repo-url
     - name: branch
-    - name: build-image
       default: main
+    - name: build-image  
   tasks:
     - name: init
       workspaces:
@@ -36,19 +36,6 @@ spec:
         value: $(params.branch)
       runAfter:
         - init
-    - name: lint
-      workspaces:
-        - name: source
-          workspace: pipeline-workspace
-      taskRef:
-        name: flake8
-      params:
-      - name: image
-        value: "python:3.9-slim"
-      - name: args
-        value: ["--count","--max-complexity=10","--max-line-length=127","--statistics"]
-      runAfter:
-        - clone
     - name: lint
       workspaces:
         - name: source
@@ -87,4 +74,22 @@ spec:
         value: "$(params.build-image)"
       runAfter:
         - tests
-        - lint    
+        - lint
+    - name: deploy
+      workspaces:
+        - name: manifest-dir
+          workspace: pipeline-workspace
+      taskRef:
+        name: openshift-client
+        kind: ClusterTask
+      params:
+      - name: SCRIPT
+        value: |
+          echo "Updating manifest..."
+          sed -i "s|IMAGE_NAME_HERE|$(params.build-image)|g" deploy/deployment.yaml
+          cat deploy/deployment.yaml
+          echo "Deploying to OpenShift..."
+          oc apply -f deploy/
+          oc get pods -l app=accounts
+      runAfter:
+        - build    
